force-app/main/default/objects/ucinn_ascendv2__Clipboard_Partition__c/ucinn_ascendv2__Clipboard_Partition__c.object-meta.xml
<CustomObject>
    <label>Clipboard Partition</label>
    <nameField>
        <displayFormat>CL-{00000000}</displayFormat>
        <label>Clipboard Partition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clipboard Partitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>