force-app/main/default/objects/ucinn_ascendv2__Clipboard_Partition__c/fields/ucinn_ascendv2__Clipboard_Saved_List__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Clipboard_Saved_List__c</fullName>
    <label>Clipboard Saved List</label>
    <referenceTo>ucinn_ascendv2__Clipboard_Saved_List__c</referenceTo>
    <relationshipLabel>Clipboard Partitions</relationshipLabel>
    <relationshipName>Clipboard_Partitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>