force-app/main/default/objects/ucinn_ascendv2__Clipboard_Partition__c/fields/ucinn_ascendv2__Content_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Content_1__c</fullName>
    <label>Content 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>